--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <sonar.host.url>http://172.31.23.140:9000/</sonar.host.url>
+    <sonar.login>administrator</sonar.login>
+    <sonar.password>user</sonar.password>
   </properties>
 
   <dependencies>
