--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
     <sonar.host.url>http:// 172.31.23.140:9000/</sonar.host.url>
-    <sonar.login>administrator</sonar.login>
-    <sonar.password>user</sonar.password>
+    <sonar.login>admin</sonar.login>
+    <sonar.password>user@2</sonar.password>
   </properties>
 
   <dependencies>
